get underscores function

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <title>Word Guess</title>
 </head>
 <body>
-  
+    <p>hang man</p>
+    <div id="word"></div>
+    <div id="guesses"></div>
 </body>
 </html>
