worked on logic

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Word Guess</title>
 </head>
 <body>
-    <p>hang man</p>
+    <h1>Hang Man</h1>
     <div id="word"></div>
     <div id="guesses"></div>
 </body>
