--- a/index.html
+++ b/index.html
@@ -5,12 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <link rel="stylesheet" href="/assets/css/style.css">
-  <script src="/assets/javascript/game.js"></script>
+  <script src="/assets/javascript/app .js"></script>
   <title>Word Guess</title>
 </head>
 <body>
     <h1>Hang Man</h1>
+    <button class="newGameBtn" type="button">New game</button>
+    <button id="newGame" type="submit">Game 2</button>
     <div id="word"></div>
     <div id="guesses"></div>
-</body>
+    <div id="songs"></div>
+   
+  
+  </body>
 </html>
